# opengl-with-neovim-on-windows

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
notes/: 2026-03-28.md  2026-03-29.md  2026-04-04.md  BREAK.md
scripts/: watch-debug.ps1
src/: 2026-03-29.cpp  2026-04-04.cpp  main.cpp
